# python-fastmcp-101

./: Makefile  README.md  example-client.py  main.py  pyproject.toml  test_client.py  test_server.py
